Bug #5961 A long CASCADEs FOREIGN KEY operation in InnoDB can cause long semaphore wait
Submitted: 7 Oct 2004 20:46 Modified: 30 Oct 2004 10:48
Reporter: Heikki Tuuri
Status: Closed
Category:Server: InnoDB Severity:S2 (Serious)
Version:All OS:
Assigned to: Heikki Tuuri Target Version:

[7 Oct 2004 20:46] Heikki Tuuri
Description:
See the synopsis.

Will probably be fixed in 4.0.22.

This bug was found by a user.

Regards,

Heikki

How to repeat:
Run such an operation, and in another thread CREATE TABLE.

Suggested fix:
Release the latch now and then, and after reacquiring check that the table(s) still
exist.
[30 Oct 2004 10:48] Heikki Tuuri
Fixed in 4.0.22.